login and registration added, roles added

--- a/warmisitAI/src/main/resources/application.properties
+++ b/warmisitAI/src/main/resources/application.properties
@@ -6,4 +6,8 @@ spring.datasource.password=09504055MM
 
 server.port=8080
 
+spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.Type = TRACE
 
