--- a/warmisitAI/src/main/resources/application.properties
+++ b/warmisitAI/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/BDWarmisitAI
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=09504055MM
+spring.datasource.password=80571521Luis
 
 server.port=8080
 
